# simple_bundle_adjuster

./: CMakeLists.txt  README.md  generate_bal_dataset.sh  simple_bundle_adjuster.cc
Data/: bal.txt  bal_gt.txt
generate_bal_dataset/: CMakeCache.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  generate_bal_dataset  generate_bal_dataset.cpp
